# FlappyBordAI

./: .gitignore  Bord.cpp  Bord.h  CMakeLists.txt  FlappyBord.cpp  FlappyBord.h  GameRect.cpp  GameRect.h  Layer.cpp  Layer.h  Network.cpp  Network.h  Pipe.cpp  Pipe.h  activation.cpp  activation.h  main.cpp  neuralmath.cpp  neuralmath.h  readme.md  util.cpp  util.h
math/: activation_tests.cpp  neuralmath.cpp
scripts/: config.example.txt  experiment.py  visualize.py
src/game/: Bord.cpp  Bord.h  FlappyBord.cpp  FlappyBord.h  GameRect.cpp  GameRect.h  Pipe.cpp  Pipe.h
src/math/: activation.h  activation_tests.h  neuralmath.h  neuralmath_tests.cpp  neuralmath_tests.h  randomutil.cpp  randomutil.h
src/neuralnet/: Layer.cpp  Layer.h  Network.cpp  Network.h  layer_tests.cpp  layer_tests.h  network_tests.cpp  network_tests.h
